{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 54,
  "lineage": "448fd7cb-238e-a8f4-a535-f0469ad9ae50",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:908103136245:vpc/vpc-02d9347da0ca54f9e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b9909cc69f89097b",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0f888747bf23e8363",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d9347da0ca54f9e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0540b9ebbdf8395da",
            "owner_id": "908103136245"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047126e50991d067b",
            "arn": "arn:aws:ec2:ap-southeast-1:908103136245:instance/i-0e128a7d8036b56db",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hybrid-ids-v2-ec2-profile",
            "id": "i-0e128a7d8036b56db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-025c588cbc51f76c7",
            "private_dns": "ip-172-31-2-147.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.2.147",
            "public_dns": "ec2-13-214-163-207.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.214.163.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b573b2a9a31702aa",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "hybrid-ids-v2-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-072ad7b658274451a",
            "tags": {
              "Name": "hybrid-ids-v2-backend"
            },
            "tags_all": {
              "Name": "hybrid-ids-v2-backend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00976270f2bf75a0e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ecr_repository.backend",
            "aws_iam_instance_profile.ec2",
            "aws_iam_role.ec2",
            "aws_secretsmanager_secret.db_credentials",
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_subnets.existing_public",
            "data.aws_vpc.existing",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:908103136245:security-group/sg-00976270f2bf75a0e",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00976270f2bf75a0e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "hybrid-ids-v2-ec2-sg",
            "name_prefix": "",
            "owner_id": "908103136245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hybrid-ids-v2-ec2-sg"
            },
            "tags_all": {
              "Name": "hybrid-ids-v2-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9347da0ca54f9e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:908103136245:security-group/sg-0ba63e71007fa63d0",
            "description": "Security group for RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba63e71007fa63d0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00976270f2bf75a0e"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "hybrid-ids-v2-rds-sg",
            "name_prefix": "",
            "owner_id": "908103136245",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hybrid-ids-v2-rds-sg"
            },
            "tags_all": {
              "Name": "hybrid-ids-v2-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9347da0ca54f9e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2",
            "aws_vpc.main",
            "data.aws_vpc.existing"
          ]
        }
      ]
    }
  ]
}